# excel_automation

./: README.md  finalsheet.py  pyproject.toml  replicated_format.xlsx  task1.ipynb
Generated file/: Raw.xlsx  SummaryReport.xlsx
Generated files/: Raw.xlsx  SummaryReport.xlsx  UpdatedSummaryReport1.xlsx  Updated_SummaryReport.xlsx  dashboard.xlsx  replicated_format.xlsx  updatedSummaryReport.xlsx  updated_dashboard.xlsx
Input files/: GT_Staff_Working_Hours.xlsx  scheduled_vs_actual_GT.csv  timeoffrequest_report_GT.csv
Reference file/: GT Staff Working Hours.xlsx
format file/: format.xlsx  summary format.xlsx
notebooks/: gt_april.ipynb  raw.ipynb  scratch.ipynb  summary.ipynb  task1.ipynb
scripts/: dashboard.py  raw.py  summary.py  updateddashboard.py  updatedsummary.py
