[tool.poetry]
name = "excel-automation"
version = "0.1.0"
description = ""
authors = ["waseemriyazz <waseemriyaz717@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
datetime = "^5.5"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
