[tool.poetry]
name = "excel-automation"
version = "0.1.0"
description = ""
authors = ["waseemriyazz <waseemriyaz717@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.4"
pandas = "^2.2.2"
datetime = "^5.5"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
